# bot

./: .gitignore  Cargo.toml  Shuttle.toml  readme.md
src/: main.rs
