[package]
name = "ideabrella-bot"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
shuttle-serenity = "0.17.0"
shuttle-runtime = "0.17.0"
shuttle-service = "0.17.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
shuttle-secrets = "0.17.0"
tokio = "1.28.0"
tracing = "0.1.37"
async-openai = "0.10.3"
lazy_static = "1.4.0"